[package]
authors = ['Grid Singularity <https://github.com/gridsingularity/>']
description = 'FRAME pallet for storing trades on the private chain.'
edition = "2018"
license = 'Unlicense'
name = 'pallet-tradestorage'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", package = "sp-io", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
